delete de pedidos ya funciona, pero falta pulir eso
